Completed fried_chicken.html

--- a/recipes/fried_chicken.html
+++ b/recipes/fried_chicken.html
@@ -8,5 +8,68 @@
 </head>
 <body>
     <h1>Fried Chicken</h1>
+    <img src="../images/fried_chicken.jpg" alt="Fried Chicken">
+    <h2>Description</h2>
+    <p>When it comes to chicken there just isn’t anything more delicious than a juicy, crusty piece of 
+    finger-licking good fried chicken. It might seem intimidating to fry your own chicken, but it’s 
+    actually pretty straightforward and it puts grocery store and fast food fried chicken to shame.  
+    If you have a thermometer for the oil and a timer, you can produce fail-proof fried chicken.  
+    If you’ve ever wanted to make your own fried chicken, now is the time to try!</p>
+
+    <p>Fried chicken is best when it is fresh and the skin is still crispy. Leftovers though will be good 
+    in the fridge for 2 to 3 days. The skin will not be as crispy reheated. For best results, reheat 
+    leftover fried chicken in a 350 degree oven for 15-20 minutes.</p>
+
+    <h2>Ingredients</h2>
+    <ul>
+        <li>6 chicken thighs</li>
+        <li>6 chicken drumsticks</li>
+        <li>3 cups buttermilk</li>
+        <li>1/2 cup Buffalo Hot Sauce optional</li>
+        <li>2 teaspoons salt</li>
+        <li>1 teaspoon pepper</li>
+    </ul>    
+    <h4>Dredging Mixture</h4>
+
+    <ul>
+        <li>3 cups all-purpose flour</li>
+        <li>1/2 cup cornstarch</li>
+        <li>1 tablespoon salt</li>
+        <li>1 tablespoon paprika</li>
+        <li>2 teaspoons onion powder</li>
+        <li>2 teaspoons garlic powder</li>
+        <li>1 teaspoon dried oregano</li>
+        <li>1 teaspoon dried basil</li>
+        <li>1 teaspoon white pepper</li>
+        <li>1 teaspoon cayenne pepper</li>
+        <li>1 quart vegetable oil for frying</li>
+    </ul>
+
+    <h2>Steps</h2>
+
+    <ol>
+
+        <li>In a large mixing bowl, whisk together buttermilk, hot sauce (optional, for added flavor), salt,
+        and pepper in a mixing bowl. Add in chicken pieces. Cover the bowl with plastic wrap and refrigerate 
+        4 hours.</li>
+
+        <li>When ready to cook, pour the vegetable oil in a skillet until it is about 3/4 inch deep. Heat to 
+        350 degrees.</li>
+
+        <li>Prepare the breading by combining the flour, cornstarch, onion powder, garlic powder, oregano, 
+        basil, white pepper, cayenne pepper, paprika, and salt in a gallon sized resealable plastic bag 
+        or shallow dish. Mix it thoroughly.</li>
+
+        <li>Working one at a time, remove chicken pieces from buttermilk mixture. Shake it gently to remove 
+        the excess. Place it in the breading mix and coat thoroughly. Tap off the excess.</li>
+
+        <li>Place the breaded chicken into the 350 degree oil. Fry 3 or 4 pieces at a time. The chicken 
+        will drop the temperature of the oil so keep it as close to 350 degrees as possible. Fry each 
+        piece for 14 minutes, turning each piece about half way through, until the chicken reaches 
+        an internal temperature of 165 degrees F.</li>
+
+        <li>Remove from the oil and place on paper towels. Let them rest for at least 10 minutes before 
+        serving. </li>
+    </ol>
 </body>
 </html>
