--- a/recipes/chicken_biryani.html
+++ b/recipes/chicken_biryani.html
@@ -8,5 +8,70 @@
 </head>
 <body>
     <h1>Chicken Biryani</h1>
+    <img src="../images/Chicken_Biryani.jpg" alt="Chicken Biryani">
+
+    <h2>Description</h2>
+
+    <p>Biryani is an intricate rice dish made with layers of curried meat and rice. Given its use of 
+    adornments and luxurious finishes, it’s no surprise that biryani has roots in Persian cuisine.</p>
+
+    <p>In Pakistan, pakki (or cooked) biryani is most common, with several prominent varieties such as 
+    Sindhi, Karachi-style, and Bombay biryani. This recipe is an amalgamation of these styles and 
+    is similar to what you’d find at a typical Pakistani or Indian restaurant or dinner party.</p>
+
+    <h2>Ingredients</h2>
+    <ul>
+        <li>1 1/4 lbs (567 g) bone-in, cut up, skinless chicken, cleaned and excess skin removed</li>
+        <li>1/2 cup (115 g) plain whole milk yogurt</li>
+        <li>1 tbsp neutral oil</li>
+        <li>2 tbsp biryani masala (recipe in post), or sub store-bought biryani masala</li>
+        <li>1 tsp coriander powder</li>
+        <li>1/2 tsp cumin powder</li>
+        <li>1/2-1 tsp red chili powder, start with 1/2 tsp if using store-bought biryani masala</li>
+        <li>1/4 tsp turmeric powder</li>
+        <li>1/4 tsp nutmeg powder</li>
+        <li>pinch cane sugar, omit if using store-bought biryani masala</li>
+        <li>2 tsp kosher salt, start with 1 ¼ tsp if using store-bought biryani masala</li>
+        <li>1 3/4 cups (~325-350 g) aged, long grain basmati rice</li>
+        <li>1 1/2 tbsp kosher salt</li>
+        <li>1 tbsp oil</li>
+        <li>1 tsp lemon juice or vinegar</li>
+    </ul>
+
+    <h2>Steps</h2>
+
+    <ol>
+        <li>In a medium bowl, combine the chicken with the ingredients listed under ‘marinade’. Cover and set 
+            aside or refrigerate (ideally) up to overnight. When ready to use, allow the chicken to come 
+            to room temperature.</li>
+
+        <li>Thoroughly wash the rice and soak it in water. Set aside.</li>
+
+        <li>Heat a large, heavy bottomed pan over high heat. Add the oil, ghee, and onions and sauté until 
+            the onions are golden (~15-20 minutes). Deglaze the pan with ¼ cup water. Once the water dries 
+            up, add the whole spices, garlic, and ginger and sauté for another 2 minutes.</li>
+
+        <li>Add the chicken with its marinade and sauté until it changes color (~2-3 minutes). Add the 
+            tomatoes, green chili pepper, and dried plum (alu bukhara) and stir to coat. Add ½ cup water 
+            (the water should cover about 1/3 of the chicken) and bring to a gentle boil.</li>
+
+        <li>Turn the heat down to a gentle simmer (this is low heat on my stovetop), cover, and allow the 
+            chicken to cook for 30 minutes, stirring midway. While the chicken is cooking, proceed to the 
+            next step. Turn off the heat once the chicken has cooked.</li>
+
+        <li>Meanwhile, prepare the rice. Place a medium pot over high heat and bring 7 cups (1.75 quarts) 
+            of water to a boil (See Tip). Add salt, oil, and lemon juice/vinegar and stir. Once the water 
+            comes to a boil, drain and add the rice. Stir, and bring it back up to a boil. Once it comes 
+            to a boil again, boil for 5 minutes (no more than 5 minutes and 30 seconds), or until the rice is
+            just cooked with a bite to it. It shouldn’t get mushy when pressed between your fingers. 
+            (See Note 1) Drain and set aside.</li>
+
+        <li>Uncover the chicken. Raise the heat to medium-high to sauté out any excess water for 2-3 minutes. 
+            Add salt, garam masala, and red chili flakes for more heat (if desired). The oil will have 
+            separated from the ‘masala’. Turn off the heat. Add kewra water and lemon juice and stir to 
+            combine.</li>
+    </ol>
+
+
 </body>
 </html>
