--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="../odin-recipes/styles/index_styles.css">
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/chicken_biryani.html">Chicken Biryani</a>
-    <a href="recipes/fried_chicken.html">Fried Chicken</a>
-    <a href="recipes/lasagna.html">Lasagna</a>
+    <div>
+        <a href="recipes/chicken_biryani.html">Chicken Biryani</a>
+        <a href="recipes/fried_chicken.html">Fried Chicken</a>
+        <a href="recipes/lasagna.html">Lasagna</a>
+    </div>
 </body>
 </html>
